--- a/index.html
+++ b/index.html
@@ -34,126 +34,7 @@ favDialog.addEventListener('close', () => {
   outputBox.value = `${favDialog.returnValue} button clicked - ${(new Date()).toString()}`;
 });
 </script>
-<style>
-/* GNOME default font and Red Hat Mono from Google API */
-
-@import url('https://fonts.googleapis.com/css2?family=Cantarell&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Mono&display=swap');
-code, pre {
-  font-family: "Red Hat Mono";
-}
-
-/* Apply font, padding, other HTML body patches */
-
-body {
-  font-family: cantarell;
-  padding: 10px;
-}
-
-/* LibAdwaita-like buttons */
-
-button {
-  padding: 15px;
-  border: none;
-  border-radius: 7.5px;
-  background-color: #e6e6e6;
-  transition: background-color 0.1s;
-  font-family: cantarell;
-}
-
-button:hover {
-  background-color: #b0b0b0;
-}
-
-button:active {
-  background-color: #828282;
-}
-
-/* LibAdwaita-like dialogues (only affects <dialog>, not JavaScript
-   native dialogs) */
-
-dialog {
-  padding: 15x;
-  border-radius: 10px;
-}
-
-/* LibAdwaita-like check boxes */
-/* The container */
-.container {
-  display: block;
-  position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-/* Hide the browser's default checkbox */
-.container input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
-}
-
-/* Create a custom checkbox */
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 25px;
-  width: 25px;
-  background-color: #eee;
-  border-radius: 5px;
-  transition: background-color 0.05s;
-}
-
-/* On mouse-over, add a grey background color */
-.container:hover input ~ .checkmark {
-  background-color: #ccc;
-}
-
-/* When the checkbox is checked, add a blue background */
-.container input:checked ~ .checkmark {
-  background-color: #2196F3;
-}
-
-/* When disabled, use hover color */
-.container input:disabled ~ .checkmark {
-  background-color: #ccc;
-}
-
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after {
-  content: "";
-  position: absolute;
-  opacity: 0;
-  transition: opacity 0.05s;
-}
-
-/* Show the checkmark when checked */
-.container input:checked ~ .checkmark:after {
-  opacity: 100;
-}
-
-/* Style the checkmark/indicator */
-.container .checkmark:after {
-  left: 9px;
-  top: 5px;
-  width: 5px;
-  height: 10px;
-  border: solid white;
-  border-width: 0 3px 3px 0;
-  border-radius: 1.5px;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-</style>
+<style>@import url("https://raw.githubusercontent.com/TylerMS887/adwaita.css/import/adwaita.css")</style>
 <body>
 
 <h1>Adwaita.CSS</h1>
