--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ favDialog.addEventListener('close', () => {
   outputBox.value = `${favDialog.returnValue} button clicked - ${(new Date()).toString()}`;
 });
 </script>
-<style>@import url("https://raw.githubusercontent.com/TylerMS887/adwaita.css/main/adwaita.css")</style>
+<style>@import "adwaita.css"</style>
 <body>
 
 <h1>Adwaita.CSS</h1>
