--- a/index.html
+++ b/index.html
@@ -54,6 +54,24 @@ ut></output>
 <p><b>Lowercase Letters:</b> abcdefghijklmnopqrstuvwxyz</br><b>Uppercase Letters:</b> ABCDEFGHIJKLMNOPQRSTUVWXYZ</br><b>Digits:</b> 0123456789</p>
 <p><b>Sentence:</b> Hello, GNOME! I'm HTML ;)</p>
 
+<h2>Questions</h2>
+<p>This is the end of the live demo page demonstrating AdwaitaCSS's power to make the web look like a standard GNOME app. If you have questions, comment them below.
+<script src="https://giscus.app/client.js"
+        data-repo="TylerMS887/adwaita.css"
+        data-repo-id="adwaita.css"
+        data-category="Live Demo Comments"
+        data-category-id="live_demo_comments"
+        data-mapping="adwcss"
+        data-strict="0"
+        data-reactions-enabled="0"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="en"
+        crossorigin="anonymous"
+        async>
+</script>
+
 </body>
 <script>
 const updateButton = document.getElementById('updateDetails');
