--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ ut></output>
 <p><b>Sentence:</b> Hello, GNOME! I'm HTML ;)</p>
 
 <h2>Questions</h2>
-<p>This is the end of the live demo page demonstrating AdwaitaCSS's power to make the web look like a standard GNOME app. If you have questions, comment them below.
+<p>This is the end of the live demo page demonstrating AdwaitaCSS's power to make the web look like a standard GNOME app. If you have questions, comment them below.</p>
 <script src="https://giscus.app/client.js"
         data-repo="TylerMS887/adwaita.css"
         data-repo-id="adwaita.css"
