--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <body>
 
 <h1>Adwaita.CSS</h1>
-<p>These examples are in English. Adwaita.css should still work for other languages, but has not been tested.</p>
+<p>These examples are in English. Adwaita.CSS should still work for other languages, but has not been tested.</p>
+<p><b>New:</b> Adwaita.CSS now has a dark mode. Turn on your system's dark mode to enable it.</p>
 <h2>Libadwaita Design Test</h2>
 <label class="container">Hi, I'm a checkbox!
   <input type="checkbox">
