--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style>
 @import "adwaita.css";
 @media (prefers-color-scheme: dark) {
-  dark-mode-info {
+  .dark-mode-info {
     visibility: none;
   }
 }
