--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <h1>Adwaita.CSS</h1>
 <h2>Libadwaita Design Test</h2>
+<h3>Checkbox</h3>
 <label class="container">Hi, I'm a checkbox!
   <input type="checkbox">
   <span class="checkmark"></span>
@@ -25,6 +26,14 @@
   <span class="checkmark"></span>
 </label>
 
+<h3>Dropdown</h3>
+<select name="desktop" id="desktop">
+  <option value="gnome">GNOME</option>
+  <option value="kde">KDE</option>
+  <option value="windows">Windows</option>
+  <option value="wm">Other/Window manager</option>
+</select>
+<h3>Dialog</h3>
 <dialog id="favDialog">
   <form method="dialog">
     <p>
@@ -44,11 +53,9 @@
   </form>
 </dialog>
 <p>
-  <button id="updateDetails">Update details</button>
-</p>
-<outp
-
-ut></output>
+  <button id="updateDetails">Open the dialog</button>
+  </p>
+<output></output>
 
 
 <h2>Font Rendering Test</h2>
