--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
   <span class="checkmark"></span>
 </label>
 
+<h3>Inputbox</h3>
+<form>
+  <label for="fname">Username or email:</label>
+  <input type="text" id="user" name="user">
+</form>
 <h3>Dropdown</h3>
 <select name="desktop" id="desktop">
   <option value="gnome">GNOME</option>
